force-app/main/default/objects/CLQ_Program_Transaction__c/CLQ_Program_Transaction__c.object-meta.xml
<CustomObject>
    <description>This object is used to manage program applications and updates</description>
    <label>Program Application</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Applications</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>