force-app/main/default/objects/CLQ_Program_Transaction__c/fields/A_LP_Criteria__c.field-meta.xml
<CustomField>
    <fullName>A_LP_Criteria__c</fullName>
    <label>A&amp;LP Criteria</label>
    <length>10</length>
    <type>Text</type>
</CustomField>