force-app/main/default/objects/CLQ_Program_Transaction__c/fields/A_LP_Domain_Points__c.field-meta.xml
<CustomField>
    <fullName>A_LP_Domain_Points__c</fullName>
    <label>A&amp;LP Domain Points</label>
    <length>10</length>
    <type>Text</type>
</CustomField>