force-app/main/default/objects/CLQ_Program_Transaction__c/fields/Accreditaion__c.field-meta.xml
<CustomField>
    <fullName>Accreditaion__c</fullName>
    <label>Accred Criteria</label>
    <length>10</length>
    <type>Text</type>
</CustomField>