force-app/main/default/objects/CLQ_Program_Transaction__c/fields/Accreditation_Domain_Ratings__c.field-meta.xml
<CustomField>
    <fullName>Accreditation_Domain_Ratings__c</fullName>
    <label>Accred Domain Ratings</label>
    <length>10</length>
    <type>Text</type>
</CustomField>