force-app/main/default/objects/CLQ_Program_Transaction__c/fields/Additional_Points_Current_Rating__c.field-meta.xml
<CustomField>
    <fullName>Additional_Points_Current_Rating__c</fullName>
    <description>DrawLoop: Created for Forms &amp; Reports. Field displays the Estimated additional Points if Rating is 4/5 or Current SUTQ Rating based on the Record Type Application - CC Center or Application - FCC</description>
    <formula>CASE(
 CLQ_Program_Record_Type__c ,
&apos;Child Care Center&apos; , &quot;Estimated Additional Points if Registering for a 4 or 5 Star Rating:&quot;  &amp;  &quot; &quot;  &amp;   TEXT(Overall_Total__c),

&apos;FCC - Type A Home&apos; , &quot;Current SUTQ Rating:&quot;  &amp;  &quot; &quot;  &amp;   CLQ_Program__r.Rating_Display__c,
&apos;FCC - Type B Home&apos; , &quot;Current SUTQ Rating:&quot;  &amp;  &quot; &quot;  &amp;   CLQ_Program__r.Rating_Display__c,


NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Points/Current Rating</label>
    <type>Text</type>
</CustomField>