force-app/main/default/objects/CLQ_Program_Transaction__c/fields/Annual_Report_Overall_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Annual_Report_Overall_Requirements__c</fullName>
    <label>Overall Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Met</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
            <value>
                <fullName>Deferral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>