force-app/main/default/objects/CLQ_Program_Transaction__c/fields/Certification_or_Licensing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Certification_or_Licensing_Entity__c</fullName>
    <label>Certification or Licensing Entity</label>
    <length>25</length>
    <type>Text</type>
</CustomField>