force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_ACA_Accredited__c.field-meta.xml
<CustomField>
    <fullName>CLQ_ACA_Accredited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Camp Accredited by the American Camping Association (ACA)</description>
    <inlineHelpText>Camp Accredited by the American Camping Association (ACA)</inlineHelpText>
    <label>ACA Accredited</label>
    <type>Checkbox</type>
</CustomField>