force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_ACA_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_ACA_Verified_Date__c</fullName>
    <description>Date when Accreditation Verified = Yes</description>
    <label>ACA Verified Date</label>
    <type>Date</type>
</CustomField>