force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Actual_Knowldg_of_Prsnce_of_Material__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Actual_Knowldg_of_Prsnce_of_Material__c</fullName>
    <description>Do you have actual knowledge of the presence of any of the below identified materials on the property?</description>
    <inlineHelpText>Do you have actual knowledge of the presence of any of the below identified materials on the property?</inlineHelpText>
    <label>Actual Knowledge of Presence of Material</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead based paint</fullName>
            </value>
            <value>
                <fullName>Asbestos</fullName>
            </value>
            <value>
                <fullName>Underground storage of hazards</fullName>
            </value>
            <value>
                <fullName>Radon Gas</fullName>
            </value>
            <value>
                <fullName>Other toxic substances</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>