force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Age_Groups_Served_Global__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Age_Groups_Served_Global__c</fullName>
    <label>Age Groups Served</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CLQ_Age_Groups_Served</valueSetName>
    </valueSet>
</CustomField>