force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Age_Groups_Serving__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Age_Groups_Serving__c</fullName>
    <description>Which of the following age groups will the program serve? (check all that apply)</description>
    <inlineHelpText>Which of the following age groups will the program serve? (check all that apply)</inlineHelpText>
    <label>Age Groups Serving</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Infant</fullName>
            </value>
            <value>
                <fullName>Toddler</fullName>
            </value>
            <value>
                <fullName>Preschool</fullName>
            </value>
            <value>
                <fullName>School-Age</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>