force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_All_above_and_nonpublic_school__c.field-meta.xml
<CustomField>
    <fullName>CLQ_All_above_and_nonpublic_school__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Any program providing child care that meets all of the following requirements and, on October 20, 1987, was being operated by a nonpublic school that holds a charter issued by the state board of education for kindergarten only.</description>
    <inlineHelpText>Any program providing child care that meets all of the following requirements and, on October 20, 1987, was being operated by a nonpublic school that holds a charter issued by the state board of education for kindergarten only.</inlineHelpText>
    <label>All above and chartered nonpublic school</label>
    <type>Checkbox</type>
</CustomField>