force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Any_Problems_With_Tanks__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Any_Problems_With_Tanks__c</fullName>
    <inlineHelpText>Are you aware of any problems, such as leakage</inlineHelpText>
    <label>Any Problems With Tanks</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>