force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Application_Approved__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Application_Approved__c</fullName>
    <label>X Application Approved</label>
    <type>Date</type>
</CustomField>