force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Application_Information_Review__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Application_Information_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application Information Review</label>
    <type>Checkbox</type>
</CustomField>