force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Application_Ready_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Application_Ready_for_Approval__c</fullName>
    <formula>AND(
NOT(CONTAINS(RecordType.Name, &quot;SUTQ&quot;)), 
OR(CONTAINS(RecordType.Name, &quot;Application&quot;), 
CONTAINS(RecordType.Name, &quot;Administrator&quot;)), 
CLQ_Ready_for_Approval__c = True, 
OR( 
AND( 
TEXT(CLQ_Recommendation__c) = &quot;Approve&quot;, 
OR(
AND( 
CONTAINS(RecordType.Name, &quot;Applic&quot;), 
CLQ_Inspection_Created__c =True, 
CLQ_Complete_Inspection__c = True, 
CLQ_CAP_Complete__c = True), 
CONTAINS(RecordType.Name, &quot;Admin&quot;)), 
CLQ_Document_Review_Complete__c = True, 
OR( 
AND( 
NOT(CONTAINS(CLQ_Program__r.RecordType.Name,&quot;Type A&quot;)), 
NOT(CONTAINS(CLQ_Program__r.RecordType.Name,&quot;Center&quot;)), 
NOT(CONTAINS(CLQ_Program__r.RecordType.Name,&quot;ODE&quot;)), 
OR(CLQ_Administrator_Review_Complete__c = False,CLQ_Administrator_Review_Complete__c = True)), 
AND( 
OR(CONTAINS(CLQ_Program__r.RecordType.Name,&quot;Type A&quot;), 
CONTAINS(CLQ_Program__r.RecordType.Name,&quot;Center&quot;)), 
CLQ_Administrator_Review_Complete__c = True 
)) 
), 
AND( 
OR(TEXT(CLQ_Recommendation__c) = &quot;Deny&quot;, TEXT(CLQ_Recommendation__c) = &quot;Withdraw&quot;), 
OR(AND(CLQ_Inspection_Created__c =True,CLQ_Complete_Inspection__c = True,CLQ_CAP_Complete__c = True), 
AND(CLQ_Inspection_Created__c =False,CLQ_Complete_Inspection__c = False,CLQ_CAP_Complete__c = False)), 
CLQ_Document_Review_Complete__c = True, 
OR( 
AND( 
NOT(CONTAINS(CLQ_Program__r.RecordType.Name,&quot;Type A&quot;)), 
NOT(CONTAINS(CLQ_Program__r.RecordType.Name,&quot;Center&quot;)), 
NOT(CONTAINS(CLQ_Program__r.RecordType.Name,&quot;ODE&quot;)), 
OR(CLQ_Administrator_Review_Complete__c = False,CLQ_Administrator_Review_Complete__c = True)), 
AND( 
OR(CONTAINS(CLQ_Program__r.RecordType.Name,&quot;Type A&quot;), 
CONTAINS(CLQ_Program__r.RecordType.Name,&quot;Center&quot;)), 
CLQ_Administrator_Review_Complete__c = True 
)) 
) 
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Ready for Approval</label>
    <type>Checkbox</type>
</CustomField>