force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Approval_Date__c</fullName>
    <label>Recommendation Approval Date</label>
    <type>Date</type>
</CustomField>