force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Approved_by_Manager__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Approved_by_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to True by the Approval Process when Approver/Manager approves the Transaction submitted for Approval</description>
    <label>Approved by Manager</label>
    <type>Checkbox</type>
</CustomField>