force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Approved_First_Day_at_New_Address__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Approved_First_Day_at_New_Address__c</fullName>
    <label>Approved First Day at New Location</label>
    <type>Date</type>
</CustomField>