force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Approved_Last_Day_at_Current_Address__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Approved_Last_Day_at_Current_Address__c</fullName>
    <label>Approved Last Day at Current Location</label>
    <type>Date</type>
</CustomField>