force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Approved_Total_Capacity__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Approved_Total_Capacity__c</fullName>
    <label>Approved Total Capacity</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>