force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Approver_Notes__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Approver_Notes__c</fullName>
    <label>Approver Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>