force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Are_you_a_foster_parent__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Are_you_a_foster_parent__c</fullName>
    <label>Are you Foster Parent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>