force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Assigned_To__c</fullName>
    <formula>Owner:User.FirstName + &quot; &quot; +  Owner:User.LastName</formula>
    <label>Assigned To</label>
    <type>Text</type>
</CustomField>