force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Assigned_To_Email__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Assigned_To_Email__c</fullName>
    <description>Field is used in Approval Process</description>
    <label>Assigned To Email</label>
    <type>Email</type>
</CustomField>