force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Associated_Organization__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Associated_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Program_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>