force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Attachment_Review__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Attachment_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attachment Review</label>
    <type>Checkbox</type>
</CustomField>