force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Attendance_Options_Global__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Attendance_Options_Global__c</fullName>
    <label>Attendance Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CLQ_Attendance_Options</valueSetName>
    </valueSet>
</CustomField>