force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Aware_of_problems_with_tanks__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Aware_of_problems_with_tanks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aware of problems with tanks</label>
    <type>Checkbox</type>
</CustomField>