force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Calculated_Max_Capacity_Under_2_5Yr__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Calculated_Max_Capacity_Under_2_5Yr__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Calculated Maximum Capacity(Under 2 1/2)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>