force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Calculated_Max_Capacity_Under_2_Yrs__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Calculated_Max_Capacity_Under_2_Yrs__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Maximum Capacity(Under 2 Yrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>