force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Calculated_Maximum_Capacity__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Calculated_Maximum_Capacity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Calculated Maximum Capacity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>