force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Certified_as_CC_prog_in_last_5_yrs__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Certified_as_CC_prog_in_last_5_yrs__c</fullName>
    <description>Within the past five years, have you been certified as a child care provider in Ohio?</description>
    <inlineHelpText>Within the past five years, have you been certified as a child care provider in Ohio?</inlineHelpText>
    <label>Certified as CC program in last 5 years</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>