force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Check_for_120_Days__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Check_for_120_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check for 120 days - not to be used on layouts</description>
    <label>Check for 120 Days</label>
    <type>Checkbox</type>
</CustomField>