force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Child_Day_Camp_Email__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Child_Day_Camp_Email__c</fullName>
    <label>Child Day Camp Email</label>
    <type>Email</type>
</CustomField>