force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Child_Day_Camp_Telephone__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Child_Day_Camp_Telephone__c</fullName>
    <label>Child Day Camp Telephone</label>
    <type>Phone</type>
</CustomField>