force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_City__c.field-meta.xml
<CustomField>
    <fullName>CLQ_City__c</fullName>
    <formula>CLQ_Program__r.CLQ_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>XCity</label>
    <type>Text</type>
</CustomField>