force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Closing_Reason__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Closing_Reason__c</fullName>
    <label>Closing Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Program&apos;s User Withdrawal</fullName>
            </value>
            <value>
                <fullName>Closed By Applicant</fullName>
            </value>
            <value>
                <fullName>Approved and Processed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Closed At Applicant&apos;s Request</fullName>
            </value>
            <value>
                <fullName>Closed By System (120 days without submission)</fullName>
            </value>
            <value>
                <fullName>New Version Created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>