force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Closure_Reason__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Closure_Reason__c</fullName>
    <label>Closure Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CLQ_Closure_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Changed Type</fullName>
            </value>
            <value>
                <fullName>Change in Jurisdiction</fullName>
            </value>
            <value>
                <fullName>Closed - Financial</fullName>
            </value>
            <value>
                <fullName>Licensed in Error</fullName>
            </value>
            <value>
                <fullName>Low Enrollment</fullName>
            </value>
            <value>
                <fullName>ODE - Charter Revoked</fullName>
            </value>
            <value>
                <fullName>ODE - Organization/Affiliation Change</fullName>
            </value>
            <value>
                <fullName>ODE - Organization Merge</fullName>
            </value>
            <value>
                <fullName>ODJFS - Closed through Settlement</fullName>
            </value>
            <value>
                <fullName>ODJFS - License Revoked</fullName>
            </value>
            <value>
                <fullName>ODJFS - Ownership Change</fullName>
            </value>
            <value>
                <fullName>ODJFS - Voluntary/Enforcement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Renovation/Construction</fullName>
            </value>
            <value>
                <fullName>Suspension</fullName>
            </value>
            <value>
                <fullName>Unsafe/Damaged Building</fullName>
            </value>
            <value>
                <fullName>Voluntary Closure</fullName>
            </value>
            <value>
                <fullName>Location change</fullName>
            </value>
            <value>
                <fullName>No longer accredited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>