force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Closure_Status__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Closure_Status__c</fullName>
    <label>Closure Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Pending Processing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>