force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Closure_Type__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Closure_Type__c</fullName>
    <label>Closure Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Temporary</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>