force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_COL_Ready_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>CLQ_COL_Ready_for_Approval__c</fullName>
    <formula>AND(NOT(CONTAINS(RecordType.Name, &quot;SUTQ&quot;)), 
CONTAINS(RecordType.Name, &quot;Change of Location&quot;), 
CLQ_Ready_for_Approval__c = True, 
OR( 
AND( 
TEXT(CLQ_Recommendation__c) = &quot;Approve&quot;, 
CLQ_Inspection_Created__c =True, 
CLQ_Complete_Inspection__c = True, 
CLQ_Document_Review_Complete__c = True), 
TEXT(CLQ_Recommendation__c) = &quot;Deny&quot;, 
TEXT(CLQ_Recommendation__c) = &quot;Withdraw&quot; 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>XCOL Ready for Approval</label>
    <type>Checkbox</type>
</CustomField>