force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Comments__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>