force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Complete_Inspection__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Complete_Inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to True When Inspection Status = Approved(Inspection Type != Pre-License) or Pending Processing (Inspection Type = Pre-License)</description>
    <label>Inspection Complete</label>
    <type>Checkbox</type>
</CustomField>