force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Completed_Review__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Completed_Review__c</fullName>
    <label>Completed Review Item</label>
    <type>TextArea</type>
</CustomField>