force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Conducted_by_education_boards_or__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Conducted_by_education_boards_or__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Child care programs conducted by boards if education or by chartered nonpublic schools that are conducted in school buildings and that provide child care to school-age children.</description>
    <inlineHelpText>Child care programs conducted by boards if education or by chartered nonpublic schools that are conducted in school buildings and that provide child care to school-age children.</inlineHelpText>
    <label>Conducted by education boards</label>
    <type>Checkbox</type>
</CustomField>