force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_CopiedToProgram__c.field-meta.xml
<CustomField>
    <fullName>CLQ_CopiedToProgram__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this checkbox will be used in schedule job which will confirm if the values are picked and copied to Program or not</description>
    <label>CopiedToProgram</label>
    <type>Checkbox</type>
</CustomField>