force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_CopiedToProgramDate__c.field-meta.xml
<CustomField>
    <fullName>CLQ_CopiedToProgramDate__c</fullName>
    <description>Used in Batch job. Set to Today() when successfully processed by nightly batch job</description>
    <label>CopiedToProgramDate</label>
    <type>Date</type>
</CustomField>