force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_County__c.field-meta.xml
<CustomField>
    <fullName>CLQ_County__c</fullName>
    <formula>CLQ_Program__r.CLQ_County__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>XCounty</label>
    <type>Text</type>
</CustomField>