force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Current_Approved_Capacity__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Current_Approved_Capacity__c</fullName>
    <formula>XCurrent_Approved_Capacity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total for all Age Groups</inlineHelpText>
    <label>Current Approved Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>