force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Current_ApprovedCapacity_Under2_5Yrs__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Current_ApprovedCapacity_Under2_5Yrs__c</fullName>
    <formula>XCurrent_Approved_Capacity_Under_2_1_2__c</formula>
    <inlineHelpText>Total for all Age Groups</inlineHelpText>
    <label>Current Approved Capacity(Under 2 1/2)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>