force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Current_Under_2_Capacity__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Current_Under_2_Capacity__c</fullName>
    <formula>XCurrent_Approved_Capacity_Under_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Approved Capacity(Under 2 Yrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>