force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Currently_Licensed_as_CC_Program__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Currently_Licensed_as_CC_Program__c</fullName>
    <description>Are you currently licensed as a child care provider/program by ODJFS</description>
    <inlineHelpText>Are you currently licensed as a child care provider/program by ODJFS</inlineHelpText>
    <label>Currently Licensed as CC Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>