force-app/main/default/objects/CLQ_Program_Transaction__c/fields/CLQ_Currenty_Licensed_as_a_provider_by_O__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Currenty_Licensed_as_a_provider_by_O__c</fullName>
    <inlineHelpText>Within the past five years, have you been licensed as a child care provider/program by ODJFS?</inlineHelpText>
    <label>Currenty Licensed as a provider by ODJFS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>